--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.93MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.87MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.54MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.98MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.87MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.88MB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.20MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇨🇳 中国-385.5KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 台湾-1.41MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-7.05MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.52MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
   - {name: 🇯🇵 日本-1.83MB/s(Youtube:不良林), server: 140.83.82.32, port: 20194, type: vmess, uuid: 71f6a39d-ee6b-477b-af0a-78a41a6bd637, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.70MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-300.9KB/s(Youtube:不良林), server: xjp.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: xjp.ziqiyun.xyz, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-1.76MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.37MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.08MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.44MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-418.4KB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.41MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.88MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.20MB/s(Youtube:不良林)
-      - 🇨🇳 中国-385.5KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
