--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.05MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.52MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
-  - {name: 🇯🇵 日本-1.83MB/s(Youtube:不良林), server: 140.83.82.32, port: 20194, type: vmess, uuid: 71f6a39d-ee6b-477b-af0a-78a41a6bd637, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.70MB/s(Youtube:不良林), server: 212.81.47.17, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-300.9KB/s(Youtube:不良林), server: xjp.ziqiyun.xyz, port: 443, type: trojan, password: 7b561e94-42f3-4f92-979c-4cf97c328025, sni: xjp.ziqiyun.xyz, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-1.76MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.52MB/s(Youtube:不良林), server: mc.xiaohouzi.club, port: 28325, type: vmess, uuid: c900facf-7e5d-3caf-a49e-c4bb1996ca95, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: mc.xiaohouzi.club}}
   - {name: 🇨🇳 中国-6.37MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.08MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.44MB/s(Youtube:不良林), server: 116.129.253.134, port: 3385, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-418.4KB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-352.4KB/s(Youtube:不良林), server: gy.12.dog, port: 20511, type: ss, cipher: chacha20-ietf-poly1305, password: 7b561e94-42f3-4f92-979c-4cf97c328025}
+  - {name: 🇬🇧 英国-1.25MB/s(Youtube:不良林), server: 195.12.49.82, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-6.51MB/s(Youtube:不良林), server: sha-cu-001.omo-m0m.com, port: 5602, type: trojan, password: 9d6a601d-8593-39b5-8861-86ac78c0c5ad, sni: sha-cu-001.omo-m0m.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.21MB/s(Youtube:不良林), server: 212.81.47.12, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-9.64MB/s(Youtube:不良林), server: sh.moonfree.top, port: 11262, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: sh.moonfree.top}}
+  - {name: 🇷🇺 俄罗斯联邦-1017.8KB/s(Youtube:不良林), server: ustls-test.xiaohouzi.club, port: 26853, type: vmess, uuid: 87c81a75-ce6e-3e72-8783-f4caad9bf96b, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: ustls-test.xiaohouzi.club}}
+  - {name: 🇺🇸 美国-3.75MB/s(Youtube:不良林), server: 212.81.47.15, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1017.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1017.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1017.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1017.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1017.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1017.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.70MB/s(Youtube:不良林)
-      - 🇺🇸 美国-300.9KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.08MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.44MB/s(Youtube:不良林)
-      - 🇺🇸 美国-418.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-352.4KB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-9.64MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1017.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
